--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\MY HP\Desktop\adhaar\me\_DSC0008.jpg" alt="mypic" width="130" height="200"></td>
+      <td><img src="https://media-exp1.licdn.com/dms/image/C5103AQG1LwjcZKfzEA/profile-displayphoto-shrink_200_200/0?e=1594857600&v=beta&t=3aZWSe3_nKrJE-eXcNy3LuBFDLha1TD7Iqpyf5A_Ugk" alt="mypic" width="170" height="200"></td>
       <td>  <h1>Yamini Shankar</h1>
         <p><i>MCA (6th sem)<br>Central University of Haryana</i></p>
         <p>I am a final semester student from the MCA dept. of the Central University
