--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
       <td>  <h1>Yamini Shankar</h1>
         <p><i>MCA (6th sem)<br>Central University of Haryana</i></p>
         <p>I am a final semester student from the MCA dept. of the Central University
-          of Haryana. To be very honest, that place holds no exceptional emotions within
-          except that I met two <i>most important people of my life, <strong>Shijin and Poonam</strong></i>.</p>
+          of Haryana.</p>
           <p> My interests include Coding(developed recently), singing , readingalmost anything and everything!
             <i>Although, I have studied HTML and CSS before during the MCA, this is prettu much the
               first time I'm learning it on serious notes.</i></p></td>
