--- a/CD.html
+++ b/CD.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>COMPILER DESIGN</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
