--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>Yami</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
       <td><img src="https://media-exp1.licdn.com/dms/image/C5103AQG1LwjcZKfzEA/profile-displayphoto-shrink_200_200/0?e=1594857600&v=beta&t=3aZWSe3_nKrJE-eXcNy3LuBFDLha1TD7Iqpyf5A_Ugk" alt="mypic" width="170" height="200"></td>
-      <td>  <h1>Yamini Shankar</h1>
+      <td>
+        <h1>Yamini Shankar</h1>
         <p><i>MCA (6th sem)<br>Central University of Haryana</i></p>
         <p>I am a final semester student from the MCA dept. of the Central University
           of Haryana.</p>
-          <p> My interests include Coding(developed recently), singing , readingalmost anything and everything!
-            <i>Although, I have studied HTML and CSS before during the MCA, this is prettu much the
-              first time I'm learning it on serious notes.</i></p></td>
+        <p>GATE Qualified</p>
+        <p>UI/UX</p>
+        <p>Web Development</p>
     </tr>
   </table>
 
@@ -41,7 +43,7 @@
   </table>
 
 
-  <hr sie="3" >
+  <hr size="3">
   <h3>Skills</h3>
   <table cellspacing="20">
     <tr>
@@ -59,7 +61,7 @@
 
   </table>
 
-  <hr sie="3" >
+  <hr size="3">
 
   <h3>Hobbies</h3>
   <ol>
@@ -69,7 +71,7 @@
   </ol>
 
 
-  <p> <a href="contact.html">Contact me</a>  </p>
+  <p> <a href="contact.html">Contact me</a> </p>
 
 </body>
 
