--- a/index.html
+++ b/index.html
@@ -10,15 +10,29 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="https://media-exp1.licdn.com/dms/image/C5103AQG1LwjcZKfzEA/profile-displayphoto-shrink_200_200/0?e=1594857600&v=beta&t=3aZWSe3_nKrJE-eXcNy3LuBFDLha1TD7Iqpyf5A_Ugk" alt="mypic" width="170" height="200"></td>
+      <td><img class="Circular" src="https://media-exp1.licdn.com/dms/image/C5103AQG1LwjcZKfzEA/profile-displayphoto-shrink_200_200/0?e=1594857600&v=beta&t=3aZWSe3_nKrJE-eXcNy3LuBFDLha1TD7Iqpyf5A_Ugk" alt="mypic" width="170" height="200"></td>
       <td>
         <h1>Yamini Shankar</h1>
-        <p><i>MCA (6th sem)<br>Central University of Haryana</i></p>
-        <p>I am a final semester student from the MCA dept. of the Central University
-          of Haryana.</p>
+        <p><i>M.Tech (1st sem)<br>Central University of Hyderabad</i></p>
+        <p>I am a first semester student from the M.Tech(IT) dept. of the Central University
+          of Hyderabad.</p>
         <p>GATE Qualified</p>
         <p>UI/UX</p>
         <p>Web Development</p>
+    </tr>
+  </table>
+
+  <table>
+    <tr>
+      <td>
+        <h1>Operating System Familiarity--</h1>
+      </td>
+      <td>
+        <p>
+          Windows <br />
+          Linux
+        </p>
+      </td>
     </tr>
   </table>
 
