--- a/index.html
+++ b/index.html
@@ -26,11 +26,19 @@
     <tr>
       <td>
         <h1>Operating System Familiarity--</h1>
-      </td>
-      <td>
         <p>
           Windows <br />
           Linux
+        </p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <h1> List of Laptop/Mobile and their configuration- </h1>
+        <p>
+          Hp Envy 13( 4GB RAM, 250 GB SSD Hard drive)<br />
+          Redmi Y3(4GB RAM, 64GB Internal storage)
+
         </p>
       </td>
     </tr>
